--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,8 +17,6 @@ body {
     font-family: Quicksand;
 }
 
-/* Main */
-
 .heading {
     color: #011f20;
     text-align: center;
@@ -33,10 +31,13 @@ body {
     padding: 20px 20px 20px 20px;
 }
 
+/* Main Page / Home Page */
+
 nav ul {
     list-style-type: none;
 }
 
+/* this will create nice looking rounded buttons for page navigation */
 .nav-btn {
     display: flex;
     justify-content: center;
@@ -53,4 +54,13 @@ nav ul {
     display: flex;
     justify-content: space-around;
     align-items: center;
+}
+
+/* Media Query: Tablets and larger (768px and up) */
+@media screen and (min-width:768px) {
+    #quiz-box {
+        width: 800px;
+        position: absolute;
+        left: 25vw
+    }
 }
