--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,11 @@ body {
     font-family: Quicksand;
 }
 
+h2, h3, h4 {
+    color: #780606;    
+    text-align: center;
+}
+
 .heading {
     color: #011f20;
     text-align: center;
