--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,8 @@ nav ul {
 #quiz-img {
     max-width: 60vw;
     max-height: 40vh;
+    display: flex;
+    justify-content: center;
 }
 
 /* Media Query: Tablets and larger (768px and up) */
